--- a/sass/partials/_events.scss
+++ b/sass/partials/_events.scss
@@ -60,7 +60,6 @@
   .event-date {
     border: 1px solid #004538;
     height: 48px;
-    text-align: center;
     width: 61px;
 
     .event-day {
